--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,25 @@
   <meta charset="utf-8">
   <title>ItworxEducation</title>
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
+  <style>
+    body {
+  background-color: #121212 !important;
+}
+html {
+  overflow-x: hidden;
+}
+  </style>
+ </head>
+<body class="scrollbar">
   <app-root></app-root>
-</body>
+  <script
+src="https://code.jquery.com/jquery-3.4.1.js"
+ >
+</script>
+
+  </body>
+
 </html>
